# MeetingRecorder

./: CMakeLists.txt  README.md  linphonerc  main.cpp
